apps/base/backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-backend
  namespace: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver-backend
  template:
    metadata:
      labels:
        app: webserver-backend
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - name: webserver-backend
          image: webserveracr.azurecr.io/mic-orders
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "1024Mi"
              cpu: "512m"
            limits:
              memory: "1024Mi"
              cpu: "512m"
